Improved JVM arguments setting